k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: portfolio

spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: ghcr.io/maissa-saad/portfolio:eff1e83338449fd4ea1f1408d8941de81126c288
          ports:
            - containerPort: 3000
