k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: portfolio-service

spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: portfolio
